<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.tecii.android.practica8.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cantidad_M" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtCM" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cantidad_P" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtCP" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSuma"
        android:text="@string/Calc"
        android:onClick="Sumar"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Res" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mi" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtRMi" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtRP" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Y" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtRY" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/M" />
        <EditText
            android:layout_width="@dimen/EditT"
            android:layout_height="wrap_content"
            android:id="@+id/txtRM" />
    </LinearLayout>

</LinearLayout>
